project(KaOS_wallpapers)
 
cmake_minimum_required(VERSION 3.0.0 FATAL_ERROR)
 
set(PROJECT_VERSION "3.0")
set(PROJECT_VERSION_MAJOR 3)
 
include(FeatureSummary)
 
find_package(ECM 1.5.0 REQUIRED NO_MODULE)
set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH} ${ECM_KDE_MODULE_DIR})

include(KDEInstallDirs)

install(DIRECTORY Abstract DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Blue DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Litho_Flowers DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Red_Button DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Pexly DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Utopic_City DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY You_Can_Fly DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Calm_Reflection DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Chicago_City DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Ether DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Foehn DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Free_Yourself DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Grass DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Lake DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Nebula DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Over_The_Sea DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Tulips DESTINATION ${WALLPAPER_INSTALL_DIR})
